// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpressionMatrix Empty matrix generateIndexFor works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
  },
  "lastFreeIndex": 1,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
    ],
    "size": Array [
      0,
      0,
    ],
    "values": Array [],
  },
  "stats": Object {},
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
    ],
    "size": Array [
      0,
      0,
    ],
    "values": Array [],
  },
}
`;

exports[`ExpressionMatrix Empty matrix pushGeneExpression works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
    "Lyz2": 1,
  },
  "lastFreeIndex": 2,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      5,
    ],
  },
  "stats": Object {
    "Gzma": Object {
      "rawMean": 0.3,
      "rawStdev": 0.4,
      "truncatedMax": 1,
      "truncatedMin": 0,
    },
    "Lyz2": Object {
      "rawMean": 2.3,
      "rawStdev": 2,
      "truncatedMax": 3,
      "truncatedMin": 2,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      3,
    ],
  },
}
`;

exports[`ExpressionMatrix Empty matrix setGeneExpression works 1`] = `
ExpressionMatrix {
  "geneIndexes": Object {
    "Gzma": 0,
    "Lyz2": 1,
  },
  "lastFreeIndex": 2,
  "rawGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      5,
    ],
  },
  "stats": Object {
    "Gzma": Object {
      "rawMean": 0.3,
      "rawStdev": 0.4,
      "truncatedMax": 1,
      "truncatedMin": 0,
    },
    "Lyz2": Object {
      "rawMean": 2.3,
      "rawStdev": 2,
      "truncatedMax": 3,
      "truncatedMin": 2,
    },
  },
  "truncatedGeneExpressions": Object {
    "datatype": undefined,
    "index": Array [
      0,
      0,
      2,
    ],
    "mathjs": "SparseMatrix",
    "ptr": Array [
      0,
      1,
      3,
    ],
    "size": Array [
      3,
      2,
    ],
    "values": Array [
      1,
      2,
      3,
    ],
  },
}
`;
